--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -147,6 +147,9 @@ header {
 }
 
 .detail-link {
+  text-align: center;
+  min-width: 44px;
+  min-height: 44px;
   display: inline-block;
   padding: 10px 15px;
   background-color: #007bff;
@@ -260,21 +263,21 @@ button#favoriteButton {
 /* Responsive adjustments */
 @media screen and (min-width: 600px) {
   .nav-items ul {
-    display: flex;
-    flex-direction: row;
-    position: static;
-    background-color: transparent;
-    width: auto;
-  }
-
-  .nav-items ul li {
-    margin-left: 20px;
+    list-style: none;
+    margin: 0;
     padding: 0;
-  }
-
-  #hamburgerButton {
     display: none;
+    flex-direction: column;
+    background-color: #333;
+    position: absolute;
+    top: 50px;
+    right: 0;
+    width: 100%;
   }
+  
+  .nav-items.nav.open ul {
+    display: flex;
+  }  
 
   .restaurant-list {
     grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
