--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,18 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hunger Apps</title>
-  <link rel="stylesheet" src="/styles/main.css">
-  <link rel="manifest" href="./app.webmanifest">
+  <link rel="stylesheet" href="/src/styles/main.css">
+  <link rel="manifest" href="/data/app.webmanifest">
   <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
 </head>
 
-<!-- 
-untuk bagian "Halaman tidak berpindah ketika klik view details pada card 
-restoran tetapi url sudah berubah, dan harus refresh manual untuk melihat perubahan." mohon arahan nya bang 
-soalnya page detail baru bisa tampil setelah direfresh.
--->
-
-<!-- bang tolong ini gimana webmanifestnya -->
 <body>
   <header>
     <div class="nav-brand">
